<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">NotNotes</string>
    <string name="enter_email">Nhập email</string>
    <string name="password">Mật khẩu</string>
    <string name="email">Email</string>
    <string name="enter_password">Nhập mật khẩu</string>
    <string name="remember_me">Lưu đăng nhập</string>
    <string name="sign_up">Đăng ký</string>
    <string name="forget_password">Quên mật khẩu?</string>
    <string name="name">Họ và tên</string>
    <string name="confirm_password">Nhập lại mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n

    </string>
    <string name="enter_old_password">Nhập mật khẩu hiện tại</string>
    <string name="old_password">Mật khẩu hiện tại</string>
    <string name="enter_new_password">Nhập mật khẩu mới</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="confirm_new_password">Nhập lại mật khẩu mới</string>
    <string name="change_password">Đổi mật khểu</string>
    <string name="contact_me">Liên hệ</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="address">Địa chỉ</string>
    <string name="homepage">Trang cá nhân</string>
    <string name="save">Lưu</string>
    <string name="profile">Trang cá nhân</string>
    <string name="settings">Cài đặt</string>
    <string name="logout">Đăng xuất</string>
    <string name="back">Quay lại</string>
    <string name="enter_name">Nhập họ và tên</string>
    <string name="enter_username">Nhập tên tài khoản</string>
    <string name="password_error">Lỗi mật khẩu</string>
    <string name="password_pattern">Mật khẩu ít nhất 8 ký tự và gồm 1 ký tự in hoa và 1 chữ số</string>
    <string name="password_unfit">Mật khẩu không khớp</string>
    <string name="empty_field_error">Lỗi thông tin trống</string>
    <string name="please_fill_all_the_field">Xin vui lòng điền hết thông tin</string>
    <string name="Annoucement">Thông báo</string>
    <string name="signup_success_message">Đăng kí người dùng thành công, sau 3s chuyển qua màn hình đăng nhập !!!</string>
    <string name="username">Tên tài khoản</string>
    <string name="username_error">Lỗi tên đăng nhập</string>
    <string name="field_not_contain_blank_space">email hoặc mật khẩu không được chứa khoảng trắng</string>
    <string name="username_has_been_used">Tên đăng nhập đã được sử dụng</string>
    <string name="user_account_error">Lỗi thông tin tài khoản</string>
    <string name="wrong_username_or_password">Sai tên tài khoản hoặc mật khẩu</string>
    <string name="change_password_success">Đổi mật khẩu thành công, sau 3s chuyển về màn hình chính</string>
    <string name="wrong_password">Sai mật khẩu hiện tại</string>
    <string name="name_error">Lỗi tên người dùng</string>
    <string name="user_fullname_not_empty">Không được để tên người dùng trống</string>
    <string name="update_user_success">Cập nhật thông tin người dùng thành công, sau 3s chuyền về trang cá nhân</string>
    <string name="text_test">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</string>
    <string name="formatted_string">Xin chào, %s! Chào mừng bạn đến ứng dụng.</string>
    <string name="title">Tiêu đề</string>
    <string name="content">Nội dung</string>
    <string name="progress">Tiến độ: </string>
    <string name="label">Nhãn</string>
    <string name="add_note_success">Thêm note thành công</string>
    <string name="forgot_password">Quên mật khẩu ???</string>
    <string name="relax_and_try_to_remember_your_password">Hãy thư giản và cố nhớ lại mật khẩu của bạn nhé !!!</string>
    <string name="no_information">Không có thông tin</string>
    <string name="delete_note">Xóa note</string>
    <string name="are_you_sure_want_to_delete_note">Bạn có chắc rằng mình muốn xóa note</string>
    <string name="delete">Xóa</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="language">Ngôn ngữ</string>
    <string name="vietnamese">tiếng Việt</string>
    <string name="english">English</string>
    <string name="title_not_empty">Không được để tiêu đề trống</string>
    <string name="no_account">Không có tài khoản?</string>
    <string name="invalid_email_error">Lỗi email không hợp lệ</string>
    <string name="your_email_is_invalid_message">Email bạn sử dụng không hợp lệ</string>
    <string name="your_email_is_invalid_or_already_in_use">Your email is invalid or already in use</string>
    <string name="email_has_been_used_please_choose_another_email">Email has been used. Please choose another email</string>
    <string name="user_not_exist_or_wrong_password">Lỗi người dùng không tồn tại hoặc sai thông tin đăng nhập</string>
    <string name="login_error">Lỗi đăng nhập</string>
    <string name="login_success">Đăng nhập thành công</string>
    <string name="email_not_verified">Thông báo xác nhận emai</string>
    <string name="please_verify_your_email">Email bạn chưa xác nhận. Bạn cần xác nhận email của bạn để đăng nhập</string>
    <string name="update_note_success">Cập nhật note thành công</string>
    <string name="delete_note_success">Xóa note thành công</string>
    <string name="delete_note_fail">Xóa note thất bại</string>
    <string name="please_enter_your_registered_email_to_receive_password_reset_link">Nhập email bạn đã đăng kí để nhận link reset mật khẩu</string>
    <string name="enter_your_registered_email">Nhập vào email bạn đã đăng kí</string>
    <string name="reset">Reset</string>
    <string name="email_is_not_empty">Email không được trống</string>
    <string name="please_check_your_email_for_password_reset_link">Kiểm tra email của bạn để nhận link reset password</string>
    <string name="upload_your_profile_picture">Upload your profile picture</string>
    <string name="choose_picture">Chọn hình ảnh</string>
    <string name="upload_picture">Đăng tải ảnh</string>
    <string name="upload_picture_success">Đăng tải ảnh thành công</string>
    <string name="take_photo">Chụp hình</string>
    <string name="camera_permission_title">Quyền sử dụng camera</string>
    <string name="camera_permission_message">Để chụp hình cần sử dụng camera, bạn có cho phép không ?</string>
    <string name="ok">Ok</string>
    <string name="denied">Từ chối</string>
    <string name="camera_permission_denied">Quyền sử dụng camera bị từ chối</string>

    <string name="nav_all_notes">Ghi chú</string>
    <string name="nav_storage">Lưu trữ</string>
    <string name="nav_labels">Nhãn</string>
    <string name="nav_recycle_bin">Thùng rác</string>
    <string name="nav_setting">Cài đặt</string>
    <string name="nav_profile">Thông tin cá nhân</string>
    <string name="nav_change_pass">Đổi mật khẩu</string>
    <string name="nav_logout">Đăng xuất</string>
    <string name="nav_drawer_open">Mở nav</string>
    <string name="nav_drawer_close">Đóng nav</string>
    <string name="nav_account">Tài khoản</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_trash">TrashActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="deadline_date">Hạn nộp: </string>
    <string name="deadline_time">Thời gian: </string>
    <string name="exit_title">Thông báo thoát màn hình</string>
    <string name="exit_message">Bạn chưa lưu ghi chú, bạn có chắc mình muốn thoát không?</string>
    <string name="exit">Thoát</string>
    <string name="science">Khoa học</string>
    <string name="example_date">18/01/2024</string>
    <string name="example_time">23:59</string>
    <string name="template_percent">%.2f%%</string>
    <string name="are_you_sure_want_move_note_to_trash_bin">Bạn có muốn chuyển ghi chú vào thùng rác không?</string>
    <string name="move_to_trash">Chuyển vào thùng rác</string>
    <string name="restore_note">Khôi phục ghi chú</string>
    <string name="are_you_sure_want_to_restore_note">Bạn có muốn khôi phục ghi chú không ?</string>
    <string name="move_note_to_trash_success">Chuyển ghi chú vào thùng rác thành công</string>
    <string name="restore">Khôi phục</string>
    <string name="search_note_by_label">Tìm nhãn:</string>
    <string name="search_by_title">"Tìm tiêu đề:"</string>
    <string name="search_by_content">"Tìm nội dung:"</string>
    <string name="add_label">Tạo nhãn</string>
    <string name="delete_label">Xoá nhãn</string>
    <string name="are_you_sure_want_to_delete_label">Bạn có chắc rằng muốn xóa nhãn</string>
    <string name="delete_label_success">Xóa nhãn thành công</string>
    <string name="delete_label_fail">Xóa nhãn thất bại</string>
</resources>