<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:inputType="text"
            android:textStyle="bold"
            android:textSize="28sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietContent"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/content"
            android:inputType="textMultiLine"
            android:scrollHorizontally="false"
            android:scrollbars="vertical"
            android:gravity="top|start"
            android:lines="20"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etLabel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/label"
            android:inputType="text"/>

        <EditText
            android:id="@+id/etProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/progress"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etDateDeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/deadline_date"
            android:clickable="true"
            android:focusable="false" />

        <EditText
            android:id="@+id/etTimeDeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/deadline_time"
            android:clickable="true"
            android:focusable="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnBackNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textColor="@color/white"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnSaveNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="@color/white"
            android:layout_gravity="end"/>

    </LinearLayout>

</LinearLayout>